# croscan

./: .gitmodules  CMakeLists.txt  README.txt  avctrl.cpp  avctrl.h  avctrl.py  avflush.cpp  avflush.h  avhook.cpp  avhook.h  avslave.cpp  croscan.cpp  croscan.py  debug.cpp  debug.h  file.list  psmsg.h  scanner.xml  sender.cpp  setting.py  typedef.h
doc/: QScanner使用说明.docx  Qscanner概要设计.docx
